adiconando informações para compartilhamento nas redes sociais

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#141C3C" />
+
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="https://tcc-experimento.vercel.app/">
+    <meta property="og:title" content="Teste seu aprendizado">
+    <meta property="og:description" content="Teste seu aprendizado através desse experimento científico em forma de jogo">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 
