--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,12 @@
 
     <meta property="og:locale" content="pt_BR">
     <meta property="og:url" content="https://tcc-experimento.vercel.app/">
-    <meta property="og:title" content="Teste seu aprendizado">
-    <meta property="og:description" content="Teste seu aprendizado através desse experimento científico em forma de jogo">
+    <meta property="og:title" content="Teste de aprendizado">
+    <meta property="og:description" content="Teste sua capacidade de aprendizado através desse experimento científico em forma de jogo de lógica.">
+    <meta property="og:image" content="https://tcc-experimento.vercel.app/thumb.png"> <!-- colocar o caminho certo -->
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="200">
+    <meta property="og:image:height" content="200">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
